tests/positive/pr115_var_basic.safe
package PR115_Var_Basic

   type Counter is range 0 to 20;

   function Bump (Input : Counter) returns Counter

      var Local : Counter = Input
      Local = Input
      return Local



