tests/negative/neg_pr1111b_interface_return.safe
package neg_pr1111b_interface_return

   type printable is interface
      function (self : printable) label returns string

   function make returns printable
      return 0
